--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -135,7 +135,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent !important;
-			color: #8cd1a8 !important;
+			color: #ffffff !important;
 			text-decoration: none;
 		}
 
@@ -3182,9 +3182,15 @@ input, select, textarea {
   border-radius: 3px 0 0 3px;
 }
 
+.prev {
+    left: 0;
+    border-radius: 3px 3px 0 0;
+}
+
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgb(150,103,105, 0.7);
+    color: white;
 }
 
 /* Caption text */
@@ -3213,22 +3219,22 @@ input, select, textarea {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #6ea5c3;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: #539cb1;
 }
 
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: 1s;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: 1s;
 }
 
 @-webkit-keyframes fade {
