--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3219,14 +3219,14 @@ input, select, textarea {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #6ea5c3;
+  background-color: #5f8daf;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #539cb1;
+  background-color: #5f8daf;
 }
 
 /* Fading animation */
